# polybar_script

./: .gitignore  Cargo.toml
src/: apires.rs  main.rs
