[package]
name = "polybar_weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geolocation = "0.2.1"
reqwest = { version = "0.11.25", features = ["json", "blocking"] }
serde = { version = "1.0.197", features = ["derive"] }

[profile.release]
lto = true
